# DNScrutiny

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
src/: brute.rs  main.rs  resolver.rs  transfer.rs
